# silcrow

./: ReadMe.md  package.json  silcrow.runtime.js  silcrow.runtime.min.js
examples/: EXAMPLES.md
examples/advanced/: 01-multi-source-aggregation.html  02-optimistic-updates.html  03-infinite-scroll.html  04-third-party-api.html
examples/frameworks/01-htmx-integration/: README.md  index.html  package.json  server.js
examples/frameworks/01-htmx-integration/fragments/: dashboard.html  profile.html
examples/frameworks/02-alpine-integration/: README.md  index.html
examples/frameworks/03-vanilla-spa/: README.md  index.html
examples/production/: 02-error-handling.html
examples/production/01-cdn-deployment/: README.md  index.html
examples/realtime/01-sse-nodejs/: README.md  index.html  package.json  server.js
examples/realtime/02-sse-go/: README.md  index.html  main.go
examples/realtime/03-sse-python/: README.md  index.html  server.py
examples/realtime/04-sse-rust/: Cargo.toml  README.md
examples/realtime/04-sse-rust/src/: main.rs
examples/realtime/04-sse-rust/static/: index.html
examples/simple/: 01-form-binding.html  02-list-rendering.html  03-property-binding.html  04-nested-paths.html  05-template-switching.html
